# Card-Games

./: CMakeLists.txt
Deck/: CMakeLists.txt  card.cpp  card.hpp  cardTypes.hpp  deck.cpp  deck.hpp
Games/: CMakeLists.txt  TestGame.cpp
Games/GoFish/: CMakeLists.txt  main.cpp
Games/GoFish/Player/: CMakeLists.txt  player.cpp  player.hpp
Games/GoFish/Table/: CMakeLists.txt  table.cpp  table.hpp
Games/Poker/: CMakeLists.txt  main.cpp
Games/Poker/Dealer/: CMakeLists.txt  dealer.cpp  dealer.hpp
Games/Poker/Logic/: CMakeLists.txt  hands.cpp  hands.hpp  logic.hpp  states.cpp  states.hpp
Games/Poker/Player/: CMakeLists.txt  player.cpp  player.hpp
Games/Poker/Table/: CMakeLists.txt  table.cpp  table.hpp
Player/: CMakeLists.txt  basePlayer.hpp
